<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="udacity_photo_descr">What the company offers</string>
    <string name="company_name">Udacity</string>
    <string name="company_adress">2465 Latham St</string>
    <string name="company_area">Mountain View, CA 94043</string>
    <string name="company_number">650-555-5555</string>
    <string name="udacitysite">www.udacity.com</string>
</resources>
